# gitnexus-setup

./: LICENSE  README.md  README.vi.md  setup.sh
GitNexus/: .cursorrules  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  compound-engineering.local.md  package-lock.json  type-resolution-roadmap.md  type-resolution-system.md
GitNexus/.claude-plugin/: marketplace.json
GitNexus/.github/: FUNDING.yml  release.yml
GitNexus/.github/workflows/: ci-integration.yml  ci-quality.yml  ci-report.yml  claude-code-review.yml  claude.yml  publish.yml
GitNexus/.history/gitnexus/: vitest.config_20260317171253.ts
GitNexus/.sisyphus/drafts/: gitnexus-brainstorming.md  noodlbox-comparison.md
GitNexus/eval/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
GitNexus/eval/bridge/: gitnexus_tools.sh  mcp_bridge.py
GitNexus/eval/configs/models/: claude-haiku.yaml  claude-opus.yaml  claude-sonnet.yaml  glm-4.7.yaml  glm-5.yaml  minimax-2.5.yaml  minimax-m2.1.yaml
GitNexus/eval/configs/modes/: baseline.yaml  native.yaml  native_augment.yaml
GitNexus/eval/prompts/: instance_baseline.jinja  instance_native.jinja  instance_native_augment.jinja  system_baseline.jinja  system_native.jinja  system_native_augment.jinja
GitNexus/gitnexus/: .npmignore  CHANGELOG.md  Dockerfile.test  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
GitNexus/gitnexus-test-setup/: .gitignore
GitNexus/gitnexus-web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+1026 files in other folders)
